--- a/toCompare/layout/qs_panel.xml
+++ b/toCompare/layout/qs_panel.xml
@@ -12,6 +12,8 @@
      limitations under the License.
 -->
 	
+	    	    <!-- Start Compare -->
+	
 <com.android.systemui.qs.QSContainerImpl android:id="@+id/quick_settings_container" android:background="@drawable/qs_background_primary" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content"
   xmlns:android="http://schemas.android.com/apk/res/android">
   
@@ -26,6 +28,9 @@
     <View android:id="@+id/quick_settings_status_bar_background" android:background="@color/lb_guidedactions_background_dark" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="@android:dimen/progress_bar_height_material" />
     <View android:id="@+id/quick_settings_gradient_view" android:background="@drawable/qs_bg_gradient" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="126.0dip" android:layout_marginTop="@android:dimen/progress_bar_height_material" />
     <com.android.systemui.qs.NonInterceptingScrollView android:id="@+id/expanded_qs_scroll_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" android:importantForAccessibility="no" android:elevation="0.0dip">
+    
+                	    <!-- End Compare -->
+                	
         <com.android.systemui.qs.QSPanel android:id="@+id/quick_settings_panel" android:background="@android:color/transparent" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:elevation="0.0dip" android:accessibilityTraversalBefore="@android:id/edit">
             <include layout="@layout/qs_footer_impl" />
             <include android:id="@+id/divider" layout="@layout/qs_media_divider" />
