--- a/toCompare/layout/super_notification_shade.xml
+++ b/toCompare/layout/super_notification_shade.xml
@@ -14,15 +14,15 @@
 	
 <com.android.systemui.statusbar.phone.NotificationShadeWindowView android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
   xmlns:android="http://schemas.android.com/apk/res/android" xmlns:sysui="http://schemas.android.com/apk/res-auto">
-    <com.android.systemui.statusbar.BackDropView android:id="@id/backdrop" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" sysui:ignoreRightInset="true">
-        <ImageView android:id="@id/backdrop_back" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="centerCrop" />
-        <ImageView android:id="@id/backdrop_front" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="centerCrop" />
+    <com.android.systemui.statusbar.BackDropView android:id="@+id/backdrop" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" sysui:ignoreRightInset="true">
+        <ImageView android:id="@+id/backdrop_back" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="centerCrop" />
+        <ImageView android:id="@+id/backdrop_front" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="centerCrop" />
     </com.android.systemui.statusbar.BackDropView>
-    <com.android.systemui.statusbar.ScrimView android:id="@id/scrim_behind" android:layout_width="fill_parent" android:layout_height="fill_parent" android:importantForAccessibility="no" sysui:ignoreRightInset="true" />
-    <com.android.systemui.statusbar.VisualizerView android:gravity="bottom" android:layout_gravity="bottom" android:id="@id/visualizerview" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" sysui:ignoreRightInset="true" />
+    <com.android.systemui.statusbar.ScrimView android:id="@+id/scrim_behind" android:layout_width="fill_parent" android:layout_height="fill_parent" android:importantForAccessibility="no" sysui:ignoreRightInset="true" />
+    <com.android.systemui.statusbar.VisualizerView android:gravity="bottom" android:layout_gravity="bottom" android:id="@+id/visualizerview" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" sysui:ignoreRightInset="true" />
     <include android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" layout="@layout/status_bar_expanded" />
     <include layout="@layout/brightness_mirror" />
-    <com.android.systemui.statusbar.ScrimView android:id="@id/scrim_in_front" android:layout_width="fill_parent" android:layout_height="fill_parent" android:importantForAccessibility="no" sysui:ignoreRightInset="true" />
+    <com.android.systemui.statusbar.ScrimView android:id="@+id/scrim_in_front" android:layout_width="fill_parent" android:layout_height="fill_parent" android:importantForAccessibility="no" sysui:ignoreRightInset="true" />
     
     
             <!--    
@@ -35,9 +35,11 @@
       *to move lock icon positiin [Left, Right]
 
 -->
-    
-    <LinearLayout android:layout_gravity="center|top" android:orientation="vertical" android:id="@id/lock_icon_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/lb_action_2_lines_height" android:paddingStart="@dimen/abc_switch_padding" android:paddingEnd="@dimen/abc_switch_padding">
-        <com.android.systemui.statusbar.phone.LockIcon android:layout_gravity="@integer/lb_details_description_subtitle_max_lines" android:id="@id/lock_icon" android:layout_width="@dimen/keyguard_lock_width" android:layout_height="@dimen/keyguard_lock_height" android:layout_marginTop="@dimen/keyguard_lock_padding" android:src="@android:drawable/ic_lock" android:scaleType="center" android:contentDescription="@string/accessibility_unlock_button" android:paddingStart="64.0dip" android:paddingEnd="64.0dip" />
-        <com.android.keyguard.KeyguardMessageArea android:ellipsize="marquee" android:gravity="center" android:layout_gravity="center|top" android:id="@id/keyguard_message_area" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/keyguard_lock_padding" android:singleLine="true" style="@style/Keyguard.TextView" />
+        	    <!-- Start Compare -->
+    <LinearLayout android:layout_gravity="center|top" android:orientation="vertical" android:id="@+id/lock_icon_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/lb_action_2_lines_height" android:paddingStart="@dimen/abc_switch_padding" android:paddingEnd="@dimen/abc_switch_padding">
+        <com.android.systemui.statusbar.phone.LockIcon android:layout_gravity="@integer/lb_details_description_subtitle_max_lines" android:id="@+id/lock_icon" android:layout_width="@dimen/keyguard_lock_width" android:layout_height="@dimen/keyguard_lock_height" android:layout_marginTop="@dimen/keyguard_lock_padding" android:src="@android:drawable/ic_lock" android:scaleType="center" android:contentDescription="@string/accessibility_unlock_button" android:paddingStart="64.0dip" android:paddingEnd="64.0dip" />
+        <com.android.keyguard.KeyguardMessageArea android:ellipsize="marquee" android:gravity="center" android:layout_gravity="center|top" android:id="@+id/keyguard_message_area" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/keyguard_lock_padding" android:singleLine="true" style="@style/Keyguard.TextView" />
     </LinearLayout>
+        	    <!-- End Compare -->
+    
 </com.android.systemui.statusbar.phone.NotificationShadeWindowView>
